// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<History /> renders <LoadingPlaceholder /> when unbuilt data is not available 1`] = `
<Uncontrolled(Panel)
  className="panel-default"
>
  <PanelHeading
    bsClass="panel"
    componentClass="div"
  >
    Changes
  </PanelHeading>
  <LoadingPlaceholder
    margin="22px"
  />
</Uncontrolled(Panel)>
`;

exports[`<History /> renders all changes in first page with error styling 1`] = `
<Uncontrolled(Panel)
  className="panel-danger"
>
  <PanelHeading
    bsClass="panel"
    componentClass="div"
  >
    Changes
  </PanelHeading>
  <ListGroup
    bsClass="list-group"
    style={
      Object {
        "maxHeight": "700px",
        "overflowY": "auto",
      }
    }
  >
    <ListGroupItem
      bsClass="list-group-item"
      key="123abc"
      listItem={false}
    >
      <Row
        bsClass="row"
        componentClass="div"
      >
        <Col
          bsClass="col"
          componentClass="div"
          md={5}
        >
          <strong>
            test-otu
          </strong>
        </Col>
        <Col
          bsClass="col"
          componentClass="div"
          md={7}
        >
          No Description
        </Col>
      </Row>
    </ListGroupItem>
  </ListGroup>
</Uncontrolled(Panel)>
`;

exports[`<History /> renders first page of change log with surplus of changes noted 1`] = `
<Uncontrolled(Panel)
  className="panel-default"
>
  <PanelHeading
    bsClass="panel"
    componentClass="div"
  >
    Changes
  </PanelHeading>
  <ListGroup
    bsClass="list-group"
    style={
      Object {
        "maxHeight": "700px",
        "overflowY": "auto",
      }
    }
  >
    <ListGroupItem
      bsClass="list-group-item"
      key="123abc"
      listItem={false}
    >
      <Row
        bsClass="row"
        componentClass="div"
      >
        <Col
          bsClass="col"
          componentClass="div"
          md={5}
        >
          <strong>
            test-otu
          </strong>
        </Col>
        <Col
          bsClass="col"
          componentClass="div"
          md={7}
        >
          test-description
        </Col>
      </Row>
    </ListGroupItem>
    <ListGroupItem
      bsClass="list-group-item"
      key="last-item"
      listItem={false}
    >
      <div
        style={
          Object {
            "textAlign": "right",
          }
        }
      >
        + 
        5
         more changes
      </div>
    </ListGroupItem>
  </ListGroup>
</Uncontrolled(Panel)>
`;
